--- a/TechnologyShare/app/src/main/res/menu/menu.xml
+++ b/TechnologyShare/app/src/main/res/menu/menu.xml
@@ -18,7 +18,7 @@
         <item
             android:id="@+id/photo"
             android:icon="@mipmap/ic_launcher"
-            android:title="相册"/>
+            android:title="拍照"/>
     </group>
     <group android:id="@+id/g4">
         <item
